_1_eks/test/2_nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nlb-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.zues.com
      secretName: zues-com-tls
  rules:
    - host: app.zues.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 80
#  Host zues.com:443 was resolved.
# * IPv6: (none)
# * IPv4: 3.33.243.145, 15.197.204.56
# *   Trying 3.33.243.145:443...
# * Connected to zues.com (3.33.243.145) port 443
# * ALPN: curl offers h2,http/1.1
# * TLSv1.3 (OUT), TLS handshake, Client hello (1):
# *  CAfile: /etc/pki/tls/certs/ca-bundle.crt
# *  CApath: none
# * TLSv1.3 (IN), TLS handshake, Server hello (2):
# * TLSv1.3 (IN), TLS handshake, Encrypted Extensions (8):
# * TLSv1.3 (IN), TLS handshake, Certificate (11):
# * TLSv1.3 (IN), TLS handshake, CERT verify (15):
# * TLSv1.3 (IN), TLS handshake, Finished (20):
# * TLSv1.3 (OUT), TLS change cipher, Change cipher spec (1):
# * TLSv1.3 (OUT), TLS handshake, Finished (20):
# * SSL connection using TLSv1.3 / TLS_AES_128_GCM_SHA256 / X25519 / RSASSA-PSS
# * ALPN: server accepted http/1.1
# * Server certificate:
# *  subject: CN=www.zues.com
# *  start date: Apr  6 03:28:04 2024 GMT
# *  expire date: Apr  6 03:28:04 2025 GMT
# *  subjectAltName: host "zues.com" matched cert's "zues.com"
# *  issuer: C=US; ST=Arizona; L=Scottsdale; O=GoDaddy.com, Inc.; OU=http://certs.godaddy.com/repository/; CN=Go Daddy Secure Certificate Authority - G2
# *  SSL certificate verify ok.
# *   Certificate level 0: Public key type RSA (2048/112 Bits/secBits), signed using sha256WithRSAEncryption
# *   Certificate level 1: Public key type RSA (2048/112 Bits/secBits), signed using sha256WithRSAEncryption
# *   Certificate level 2: Public key type RSA (2048/112 Bits/secBits), signed using sha256WithRSAEncryption
# * using HTTP/1.x
# > GET / HTTP/1.1
# > Host: zues.com
# > User-Agent: curl/8.5.0
# > Accept: */*
# >
# * TLSv1.3 (IN), TLS handshake, Newsession Ticket (4):
# < HTTP/1.1 200 OK
# < Content-Type: text/html
# < Date: Mon, 31 Mar 2025 13:25:00 GMT
# < Content-Length: 114
# <
# * Connection #0 to host zues.com left intact

# * Host app.zues.com:443 was resolved.
# * IPv6: (none)
# * IPv4: 15.197.204.56, 3.33.243.145
# *   Trying 15.197.204.56:443...
# * Connected to app.zues.com (15.197.204.56) port 443
# * ALPN: curl offers h2,http/1.1
# * TLSv1.3 (OUT), TLS handshake, Client hello (1):
# *  CAfile: /etc/pki/tls/certs/ca-bundle.crt
# *  CApath: none
# * TLSv1.3 (IN), TLS alert, unrecognized name (624):
# * OpenSSL/3.0.8: error:0A000458:SSL routines::tlsv1 unrecognized name
# * Closing connection
# curl: (35) OpenSSL/3.0.8: error:0A000458:SSL routines::tlsv1 unrecognized name
